--- a/client/src/pages/group/style.scss
+++ b/client/src/pages/group/style.scss
@@ -15,21 +15,26 @@
 }
 
 #Call-Log {
-  top: 20px;
+  top: 200px;
   background-color: #04AA6D;
 }
 
-#Group-Rank {
+#Report{
   top: 80px;
+  background-color: #dbf10f;
+}
+
+#Group-Rank {
+  top: 140px;
   background-color: #2196F3;
 }
 
 #News {
-  top: 140px;
+  top: 20px;
   background-color: #f44336;
 }
 
 #Sites {
-  top: 200px;
+  top: 260px;
   background-color: #555
 }
