--- a/client/src/pages/group/style.scss
+++ b/client/src/pages/group/style.scss
@@ -39,26 +39,38 @@
   background-color: #555
 }
 .navbar {
+  padding-top: 30px;
   overflow: hidden;
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a {
-  float: left;
+  
+  float: right;
   font-size: 16px;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
+.navbar img {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  height: 4%;
+  width: 4%;
+  text-decoration: none;
+}
 
 .dropdown {
-  float: left;
+  float: right;
   overflow: hidden;
 }
 
 .dropdown .dropbtn {
+  
   font-size: 16px;  
   border: none;
   outline: none;
@@ -70,10 +82,12 @@
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
+  
   background-color: red;
 }
 
 .dropdown-content {
+  
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -83,6 +97,7 @@
 }
 
 .dropdown-content a {
+  
   float: none;
   color: black;
   padding: 12px 16px;
