--- a/client/src/pages/group/style.scss
+++ b/client/src/pages/group/style.scss
@@ -39,7 +39,8 @@
   background-color: #555
 }
 .navbar {
-  padding-top: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   overflow: hidden;
   background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
