--- a/client/src/auth/style.scss
+++ b/client/src/auth/style.scss
@@ -1,64 +1,197 @@
 .base-container {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .header {
+    display:block;
+    font-size: 24px;
+    font-family: "Open Sans", sans-serif;
+  }
+
+  .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  
-    .header {
-      font-size: 24px;
-      font-family: "Open Sans", sans-serif;
+
+    .image {
+      width: 21em;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
-  
-    .content {
+
+    .form {
+      margin-top: 2em;
       display: flex;
       flex-direction: column;
-  
-      .image {
-        width: 21em;
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-  
-      .form {
-        margin-top: 2em;
+      align-items: center;
+
+      .form-group {
         display: flex;
         flex-direction: column;
-        align-items: center;
-  
-        .form-group {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          width: fit-content;
-          label {
-            font-size: 20px;
-          }
-          input {
-            margin-top: 6px;
-            min-width: 18em;
-            height: 37px;
-            padding: 0px 10px;
-            font-size: 16px;
-            font-family: "Open Sans", sans-serif;
-            background-color: #f3f3f3;
-            border: 0;
-            border-radius: 4px;
-            margin-bottom: 31px;
-            transition: all 250ms ease-in-out;
-  
-            &:focus {
-              outline: none;
-              box-shadow: 0px 0px 12px 0.8px #3474dbb2;
-            }
+        align-items: flex-start;
+        width: fit-content;
+
+        label {
+          font-size: 20px;
+        }
+        
+        input {
+          margin-top: 6px;
+          min-width: 18em;
+          height: 37px;
+          padding: 0px 10px;
+          font-size: 16px;
+          font-family: "Open Sans", sans-serif;
+          background-color: #f3f3f3;
+          border: 0;
+          border-radius: 4px;
+          margin-bottom: 31px;
+          transition: all 250ms ease-in-out;
+
+          &:focus {
+            outline: none;
+            box-shadow: 0px 0px 12px 0.8px #3474dbb2;
           }
         }
       }
     }
+  }
+
+  .footer {
+    margin-top: 3em;
+  }
+}
+
+body {font-family: Arial, Helvetica, sans-serif;}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 4px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
   
-    .footer {
-      margin-top: 3em;
-    }
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
   }
   
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
+.primaryBtn {
+  margin: 20px 10px;
+  cursor: pointer;
+  font-weight: 500;
+  padding: 13px 25px;
+  border-radius: 15px;
+  font-size: 0.8rem;
+  border: none;
+  color: white;
+  background: #185adb;
+  transition: all 0.25s ease;
+}
+
+.primaryBtn:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px -10px rgba(24, 90, 219, 0.6);
+}
