--- a/client/src/pages/group/style.scss
+++ b/client/src/pages/group/style.scss
@@ -244,3 +244,146 @@ body {
     left: calc(50% - 150px);
   }
 }
+
+.row {
+  display: flex;
+}
+
+/* Left column (menu) */
+.left {
+  flex: 15%;
+  margin: 25px;
+  padding: 15px 0;
+  text-align: center;
+}
+
+.left h2 {
+  padding-left: 8px;
+}
+.left-top {
+  font-size: 30px;
+  font-style: bold;
+  color: #ff0000;
+  border-bottom: 3px solid #ff0000;
+  padding: 15px 120px;
+}
+.left-list {
+  text-align: left;
+  padding-top: 20px;
+  padding-left: 25px;
+}
+/* Right column (page content) */
+.right {
+  flex: 75%;
+  padding: 15px;
+}
+
+/* Style the search box */
+#mySearch {
+  width: 70%;
+  font-size: 18px;
+  padding: 3px;
+  border: 2px solid #ff0000;
+  border-radius: 25px;
+  margin-top: 40px;
+}
+
+/* Style the navigation menu inside the left column */
+#myMenu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: #ff0000;
+}
+
+#myMenu li a {
+  padding: 12px;
+  text-decoration: none;
+  color: black;
+  display: block;
+}
+
+#myMenu li a:hover {
+  background-color: whitesmoke;
+}
+.add-button {
+  background-color: #ff0000;
+  padding: 10px 35px;
+  border-radius: 10px;
+  position: fixed;
+  right: 20px;
+  border: 0px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 50%;
+  height: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  border-radius: 20px;
+}
+.modal-header {
+  height: 25%;
+}
+.mark {
+  width: 50%;
+  height: 50%;
+}
+.mark-avatar { 
+  width: 30%;
+  float: left;
+}
+.welcome {
+  width: 50%;
+}
+.close {
+  width: 10%;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
